<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Day Logger</string>
    <string name="action_settings">Settings</string>
    <string name="new_action">New Action</string>
    <string name="action_hour">HH</string>
    <string name="action_minutes">MM</string>
    <string name="title_activity_new_action">NewActionActivity</string>
    <string name="new_action_name_text">Name:</string>
    <string name="new_action_note_text">Note:</string>
    <string name="save_btn">Save Action</string>
    <string name="title_activity_action_detail">ActionDetailActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
