<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="@dimen/action_view_height"
    android:background="@drawable/action_bg">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:id="@+id/hourLbl"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/time_height"
            android:text="@string/action_hour"
            android:gravity="center"
            android:textSize="@dimen/time_text"
            android:textColor="@color/Black"/>

        <TextView
            android:id="@+id/minuteLbl"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/time_height"
            android:text="@string/action_minutes"
            android:gravity="center"
            android:textSize="@dimen/time_text"
            android:textColor="@color/Black"/>

    </LinearLayout>

        <TextView
            android:id="@+id/actionName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="30dp"
            android:text="@string/new_action"
            android:gravity="center"
            android:textColor="@color/Black"/>

</LinearLayout>